Fix longer inline code items on small screens

--- a/css/tinymce-codehighlight-common.css
+++ b/css/tinymce-codehighlight-common.css
@@ -45,6 +45,7 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"] {
   padding: .2em;
   border-radius: 3px;
+  white-space: pre-wrap;
 }
 .token.important,
 .token.bold {
